Finished for now

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta property='og:title' content=''>
         <link rel='shortcut icon' href='' type='image/x-icon'>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel='stylesheet' href='./css/css/style.css'>
+        <link rel='stylesheet' href='./css/style.css'>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Halant&family=Nunito:wght@300&display=swap" rel="stylesheet">
@@ -22,6 +22,7 @@
             <div class="navbar" id="navbar">
                 <div class="navName">Estrella Angel</div>
                 <ul class="links">
+                    <li class="resume"><a href="#about">About</a></li>
                     <li class="resume"><a href="#resume">Resume</a></li>
                     <li class="skills"><a href="#skills">Skills</a></li>
                     <li class="gallery"><a href="#gallery">Gallery</a></li>
@@ -35,16 +36,58 @@
         <section id="landing">
             <div class="landing-container">
                 <h1>Estrella Angel</h1>
-                <h2>Something about you/your job and or where you live</h2> 
+                <h2>Computer Science Engineer</h2> 
                 <!-- ^im ------ i live in ----- and i am a ------ , pretty short if not animated^ -->
                 <a href="#skills" class="btn-scroll scrollto" title="Scroll down">
                     <!-- href takes to "skills" id of this page -->
-                    <i class="bx bx-chevron-down">somefin</i>
+                    <!-- <i class="bx bx-chevron-down">somefin</i> -->
                 </a>
             </div>
         </section>
         <!-- Landing End -->
 
+        <!-- About Me Start -->
+        <section id="about" class="about">
+            <div class="container">
+
+                <div class="section-title">
+                    <h2>About</h2>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-4 aos-init aos-animate" data-aos="fade-right">
+                        <img src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?cs=srgb&dl=pexels-luis-gomes-546819.jpg&fm=jpg" class="img-fluid" alt="">
+                    </div>
+                    <div class="col-lg-8 pt-4 pt-lg-0 content aos-init aos-animate" data-aos="fade-left">
+                        <h3>Backend &amp; Frontend Web Developer.</h3>
+                        <p class="fst-italic">
+                            Passionate ASU student with over a year of experience in web design. Seeking to use proven skills in JavaScript, CSS and HTML to provide your company with the best service.
+                        </p>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <ul>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Estrella Angel</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(623) 999 - 6701</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Goodyear, AZ</span></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-6">
+                            <ul>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>17</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>ella34138@gmail.com</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                            </ul>
+                        </div>
+                    </div>
+                        <p>
+                            Looking for a job that is challenging and engaging. Is eager and excited about getting a job in the computer field. 
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <!-- About Me End -->
 
         <!-- Resume -->
         <section class="resume" id="resume">
@@ -59,28 +102,31 @@
                         <h3 class="resume-title">Summary or Cover Letter</h3>
                         <div class="resume-item pb-0">
                             <h4>Estrella Angel</h4>
-                            <p><em>A brief description about yourslef and what you want to get out of your job. Talk about strengths and experiences</em></p>
+                            <p><em>Hard-working ASU student that is passionate about her career in computer science.</em></p>
                             <p>
                                 <ul>
-                                    <li>Street Adress</li>
-                                    <li>Phone #</li>
-                                    <li>Email</li>
+                                    <li>Goodyear, AZ</li>
+                                    <li>(623) 999-6701</li>
+                                    <li>ella34138@gmail.com</li>
                                 </ul>
                             </p>
                         </div>
                         <h3 class="resume-title">Education</h3>
                         <div class="resume-item">
-                            <h4>What degree you graduated with</h4>
-                            <h5>Graduation year</h5>
-                            <p><em>where you graduated from</em></p>
-                            <p>Awards, honors, anything notable (member of stuco, nhs, top 10%, honors role)</p>
-                        </div>
-
-                        <div class="resume-item">
-                            <h4>What degree you graduated with</h4>
-                            <h5>Graduation year</h5>
-                            <p><em>where you graduated from</em></p>
-                            <p>Awards, honors, anything notable (member of stuco, nhs, top 10%, honors role)</p>
+                            <h4>High School Diploma</h4>
+                            <h5>2021</h5>
+                            <p><em>Millennium High School</em></p>
+                            <p>Graduated recently in 2021, after 4 years of hard work and dedication she was able to finish at the top 10% of her class and have a strong impact on her school. </p>
+                            <p>
+                                <p>Clubs</p>
+                                <ul>
+                                    <li>National Honors Society</li>
+                                    <li>Student Government</li>
+                                    <li>DECA</li>
+                                    <li>Future Business Leaders of America (Officer)</li>
+                                    <li>Key Club</li>
+                                </ul>
+                            </p>
                         </div>
                         <!-- Add more as needed -->
                     </div>
@@ -88,22 +134,21 @@
                     <div class="col-lg-6">
                         <h3 class="resume-title">Certifications</h3>
                         <div class="resume-item">
-                            <h4>What degree you graduated with</h4>
-                            <h5>Graduation year</h5>
-                            <p><em>where you graduated from</em></p>
-                            <p>Awards, honors, anything notable (member of stuco, nhs, top 10%, honors role)</p>
+                            <h4>MICROSOFT TECHNOLOGY ASSOCIATE (MTA)</h4>
+                            <h5>2021</h5>
+                            <p><em>Microsoft</em></p>
                         </div>
                         <!-- Add more as needed -->
                         <h3 class="resume-title">Professional Experience</h3>
                         <div class="resume-item">
-                            <h4>Position at the company</h4>
-                            <h5>Years you worked</h5>
-                            <p><em>company address</em></p> 
+                            <h4>Hostess</h4>
+                            <h5>6 Months</h5>
+                            <p><em>Goodyear, AZ</em></p> 
                             <!-- not specific could be like "goodyear Az" -->
                             <ul>
-                                <li>Key Roles</li>
-                                <li>Or Responsibilites</li>
-                                <li>Or related Skills</li>
+                                <li>Greeted and escourted guest to assigned table</li>
+                                <li>Communicated delays and offfereed additional services that occupied guests while waiting</li>
+                                <li>Created a welcoming enviorment, answered questions and offered information on the returant and their specialties</li>
                             </ul>
                         </div>
                         <!-- Add more as needed -->
@@ -139,6 +184,12 @@
                             <div class="progress-bar" style="width: 60%"></div>
                         </div>
                     </div>
+                    <div class="progress">
+                        <span class="skill">REACT JSX <i class="val">50%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" style="width: 50%"></div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="progress">
@@ -169,27 +220,27 @@
             <div class="section-title container"><h2>Gallery</h2></div>
             <div class="container">
                 <div class="proj col-lg-4 col-sm-12">
-                    <div class="projTitle">Project 1</div>
-                    <div class="slide slide1 active">
+                    <!-- <div class="projTitle">Project 1</div> -->
+                    <!-- <div class="slide slide1 active"> -->
                         <!-- INPUT PAGES OF PROJECTS HERE -->
-                    </div>
-                    <div class="slide slide2">
+                    <!-- </div>
+                    <div class="slide slide2"> -->
                         <!-- INPUT PAGES OF PROJECTS HERE -->
-                    </div>
-                    <div class="slide slide3">
+                    <!-- </div>
+                    <div class="slide slide3"> -->
                         <!-- INPUT PAGES OF PROJECTS HERE -->
-                    </div>
+                    <!-- </div> -->
                     <!-- ADD MORE SLIDES FOR AS MANY PAGES THERE ARE -->
-                    <div class="projDescription">
+                    <!-- <div class="projDescription"> -->
                         <!-- INPUT WHAT THE WEBPAGE DOES HERE -->
-                        Nulla consequat Lorem ut ad reprehenderit anim non est dolore cupidatat. Velit aliqua dolor et culpa qui consectetur aliquip ipsum aliquip laborum dolor irure. Eiusmod dolor pariatur laboris enim officia aliqua velit labore veniam amet.
-                    </div>
+                        <!-- Nulla consequat Lorem ut ad reprehenderit anim non est dolore cupidatat. Velit aliqua dolor et culpa qui consectetur aliquip ipsum aliquip laborum dolor irure. Eiusmod dolor pariatur laboris enim officia aliqua velit labore veniam amet.
+                    </div> -->
                 </div>
 
                 <div class="proj col-lg-4 col-sm-12">
-                    <div class="projTitle">Project 2</div>
+                    <div class="projTitle">Weather Project</div>
                     <div class="slide slide1 active">
-                        <!-- INPUT PAGES OF PROJECTS HERE -->
+                        <img src="/images/project.png" alt="">
                     </div>
                     <div class="slide slide2">
                         <!-- INPUT PAGES OF PROJECTS HERE -->
@@ -200,26 +251,26 @@
                     <!-- ADD MORE SLIDES FOR AS MANY PAGES THERE ARE -->
                     <div class="projDescription">
                         <!-- INPUT WHAT THE WEBPAGE DOES HERE -->
-                        Nulla consequat Lorem ut ad reprehenderit anim non est dolore cupidatat. Velit aliqua dolor et culpa qui consectetur aliquip ipsum aliquip laborum dolor irure. Eiusmod dolor pariatur laboris enim officia aliqua velit labore veniam amet.
-                    </div>
+                        Created a newscasting website that told the weather forcast for the following week as well as the hourly forcast. Worked efficiently with a team to design and code the website.
+                        </div>
                 </div>
 
                 <div class="proj col-lg-4 col-sm-12">
-                    <div class="projTitle">Project 3</div>
-                    <div class="slide slide1 active">
+                    <!-- <div class="projTitle">Project 3</div>
+                    <div class="slide slide1 active"> -->
                         <!-- INPUT PAGES OF PROJECTS HERE -->
-                    </div>
-                    <div class="slide slide2">
+                    <!-- </div>
+                    <div class="slide slide2"> -->
                         <!-- INPUT PAGES OF PROJECTS HERE -->
-                    </div>
-                    <div class="slide slide3">
+                    <!-- </div>
+                    <div class="slide slide3"> -->
                         <!-- INPUT PAGES OF PROJECTS HERE -->
-                    </div>
+                    <!-- </div> -->
                     <!-- ADD MORE SLIDES FOR AS MANY PAGES THERE ARE -->
-                    <div class="projDescription">
+                    <!-- <div class="projDescription"> -->
                         <!-- INPUT WHAT THE WEBPAGE DOES HERE -->
-                        Nulla consequat Lorem ut ad reprehenderit anim non est dolore cupidatat. Velit aliqua dolor et culpa qui consectetur aliquip ipsum aliquip laborum dolor irure. Eiusmod dolor pariatur laboris enim officia aliqua velit labore veniam amet.
-                    </div>
+                        <!-- Nulla consequat Lorem ut ad reprehenderit anim non est dolore cupidatat. Velit aliqua dolor et culpa qui consectetur aliquip ipsum aliquip laborum dolor irure. Eiusmod dolor pariatur laboris enim officia aliqua velit labore veniam amet.
+                    </div> -->
                 </div>
             </div>
         </section>
